--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 /*
- Theme Name:   CB Afiniti 2023
+ Theme Name:   CB Afiniti US 2025
  Theme URI:    https://www.afiniti.co.uk/
- Description:  Theme for Afiniti 2023
+ Description:  Theme for Afiniti US 2025
  Author:       Chillibyte - DS
  Author URI:   https://www.chillibyte.co.uk/
  Template:     understrap
  Version:      0.2
  License: GNU General Public License v2 or later
  License URI: http://www.gnu.org/licenses/gpl-2.0.html
- Text Domain:  cb-afiniti
+ Text Domain:  cb-afinitius2025
  Tags: one-column, custom-menu, featured-images, theme-options, translation-ready
- GitHub Theme URI: understrap/cb-afiniti
+ GitHub Theme URI: understrap/cb-afinitius2025
 */
