--- a/src/sass/theme/blocks/_text_image.scss
+++ b/src/sass/theme/blocks/_text_image.scss
@@ -3,17 +3,29 @@
     z-index: 0;
     position: relative;
 
-    .halfcircle-green::before {
+    .halfcircle-green::before,
+    .halfcircle-green-500::before {
         background-color: var(--col-green-500);
     }
-    .halfcircle-orange::before {
+    .halfcircle-orange::before,
+    .halfcircle-orange-500::before {
         background-color: var(--col-orange-500);
     }
-    .halfcircle-purple::before {
+    .halfcircle-purple::before,
+    .halfcircle-purple-500::before {
         background-color: var(--col-purple-500);
     }
-    .halfcircle-grey::before {
+    .halfcircle-grey::before,
+    .halfcircle-grey-500::before {
         background-color: var(--col-grey-500);
+    }
+    .halfcircle-blue::before,
+    .halfcircle-blue-500::before {
+        background-color: var(--col-blue-500);
+      }
+    .halfcircle-red::before,
+    .halfcircle-red-500::before {
+        background-color: var(--col-red-500);
     }
 
     .ss-halfcircle {
