--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -13,6 +13,13 @@
   --col-grey-400: hsl(270, 1%, 54%);
   --col-grey-500: hsl(270, 1%, 38%);
   --col-grey-700: hsl(270, 1%, 22%);
+  --col-blue-300: hsl(197, 100%, 51%);
+  --col-blue-500: hsl(197, 100%, 44%);
+  --col-blue-700: hsl(197, 100%, 34%);
+  --col-dk-purple-500: hsl(248, 49%, 19%);
+  --col-red-300: hsl(354, 65%, 47%);
+  --col-red-500: hsl(354, 65%, 40%);
+  --col-red-700: hsl(354, 65%, 32%);
 }
 
 /*!
@@ -21268,9 +21275,29 @@ strong, b {
   color: var(--col-purple-500);
 }
 
+.has-dk-purple-500-color,
+.text--dk-purple {
+  color: var(--col-dk-purple-500);
+}
+
 .has-orange-500-color,
 .text--orange {
   color: var(--col-orange-500);
+}
+
+.has-blue-500-color,
+.text--blue {
+  color: var(--col-blue-500);
+}
+
+.has-purple-500-color,
+.text--purple {
+  color: var(--col-purple-500);
+}
+
+.has-red-500-color,
+.text--red {
+  color: var(--col-red-500);
 }
 
 .has-grey-500-color,
@@ -21343,6 +21370,42 @@ strong, b {
 
 .bg--grey-700 {
   background: var(--col-grey-700) !important;
+  color: white !important;
+}
+
+.has-blue-700-background-color,
+.bg--blue-700 {
+  background: var(--col-blue-700) !important;
+  color: white !important;
+}
+
+.has-blue-500-background-color,
+.bg--blue,
+.bg--blue-500 {
+  background: var(--col-blue-500) !important;
+  color: white !important;
+}
+
+.bg--blue-300 {
+  background: var(--col-blue-300) !important;
+  color: white !important;
+}
+
+.has-red-700-background-color,
+.bg--red-700 {
+  background: var(--col-red-700) !important;
+  color: white !important;
+}
+
+.has-red-500-background-color,
+.bg--red,
+.bg--red-500 {
+  background: var(--col-red-500) !important;
+  color: white !important;
+}
+
+.bg--red-300 {
+  background: var(--col-red-300) !important;
   color: white !important;
 }
 
