--- a/src/sass/theme/_props.scss
+++ b/src/sass/theme/_props.scss
@@ -19,6 +19,7 @@ $col-grey-400: hsl(270, 1%, 54%);
 $col-grey-500: hsl(270, 1%, 38%);
 $col-grey-700: hsl(270, 1%, 22%);
 
+$col-blue-500: hsl(197, 100%, 44%);
 
 :root {
 
@@ -43,4 +44,13 @@ $col-grey-700: hsl(270, 1%, 22%);
     --col-grey-500: hsl(270, 1%, 38%);
     --col-grey-700: hsl(270, 1%, 22%);
     
+    --col-blue-300: hsl(197, 100%, 51%);
+    --col-blue-500: hsl(197, 100%, 44%);
+    --col-blue-700: hsl(197, 100%, 34%);
+
+    --col-dk-purple-500: hsl(248, 49%, 19%);
+    
+    --col-red-300: hsl(354, 65%, 47%);
+    --col-red-500: hsl(354, 65%, 40%);
+    --col-red-700: hsl(354, 65%, 32%);
 }
