--- a/src/sass/theme/_borders.scss
+++ b/src/sass/theme/_borders.scss
@@ -52,6 +52,38 @@
         top: -15%;
         left: 15%;
     }
+
+    .image-with-circle-border {
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        aspect-ratio: 1;
+        width: 250px;
+        max-width: 100%;
+        margin: 0 auto;
+        
+        &::before {
+            content: '';
+            position: absolute;
+            border: 2px dashed #fff;
+            border-radius: 50%;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            pointer-events: none;
+            z-index: 0;
+        }
+        
+        img {
+            position: relative;
+            z-index: 1;
+            max-width: 85%;
+            max-height: 85%;
+            object-fit: contain;
+        }
+    }
 }
 
 
